# atmosphere

./: .gitignore  API_AUDIT.md  ARCHITECTURE.md  BLE_TRANSPORT_IMPLEMENTATION.md  BUILD_COMPLETE_EXECUTION_LAYER.md  BUILD_COMPLETE_ML_ENDPOINTS.md  BUILD_SUMMARY_INTERNET_NETWORKING.md  CHANGELOG.md  CHANGES_SUMMARY.md  Dockerfile  E2E_MESH_TEST.md  EXECUTION_LAYER.md  EXECUTION_LAYER_COMPLETE.md  EXECUTION_PLAN.md  FAST_ROUTING_COMPLETE.md  FEATURE_VERIFICATION.md  FULL_STACK_EXECUTION_PLAN.md  IMPLEMENTATION_CASCADE.md  IMPLEMENTATION_REVIEW.md  INTEGRATION_IMPLEMENTATION.md  LICENSE  LIVE_TEST_REPORT.md  LLAMAFARM_DISCOVERY_UPDATE.md  MAC_UI_FIX.md  MANIFEST.in  MASTER_PLAN.md  ML_ENDPOINTS_COMPLETE.md  MULTI_PATH_CONNECTIVITY.md  MVP.md  ORCHESTRATION_STATUS.md  QUICKSTART_EXECUTION.md  QUICK_REFERENCE_INTERNET_NETWORKING.md  QUICK_START_EXECUTION.md  README.md  RELAY_LIVE.md  ROADMAP_TO_PRODUCTION.md  ROUTING_LAYER_COMPLETE.md  SPRINT_PLAN_1HR.md  SPRINT_TASKS.md  SUMMARY_ML_WIRING.md  (+19 more)
agents/: README.md  anomaly_agent.md  anomaly_agent.yaml  learning_agent.md  learning_agent.yaml  notification_agent.md  notification_agent.yaml  orchestrator_agent.md  orchestrator_agent.yaml  provisioning_agent.yaml  research_agent.md  research_agent.yaml  vision_agent.md  vision_agent.yaml
agents/schemas/: agent_schema.json
atmosphere/: __init__.py  cli.py  config.py
atmosphere/adapters/: __init__.py  llamafarm.py
atmosphere/agents/: __init__.py  base.py  gossip.py  loader.py  registry.py
atmosphere/api/: __init__.py  routes.py  server.py  websocket.py
atmosphere/app/: __init__.py  menubar.py
atmosphere/approval/: __init__.py  cli.py  config.py  models.py
atmosphere/assets/: generate_icon.py
atmosphere/auth/: __init__.py  federation.py  identity.py  tokens.py
atmosphere/capabilities/: __init__.py  base.py  examples.py  executor.py  llm.py  registry.py  vision.py
atmosphere/cost/: __init__.py  cli.py  collector.py  gossip.py  model.py  router.py
atmosphere/deployment/: __init__.py  cli.py  distributor.py  gossip.py  packager.py  registry.py
atmosphere/discovery/: __init__.py  api_discovery.py  llamafarm.py  ollama.py  scanner.py
atmosphere/install/: __init__.py  com.llamafarm.atmosphere.plist
atmosphere/integrations/: __init__.py
atmosphere/mesh/: __init__.py  discovery.py  gossip.py  join.py  network.py  node.py  routing.py  transport.py
atmosphere/network/: README.md  __init__.py  ip_detect.py  nat.py  relay.py  stun.py
atmosphere/registry/: __init__.py  devices.py
atmosphere/scanner/: cli.py  (+6 more)
config/: mission_example.yaml  offline_distribution.md
demos/: bidirectional_demo.py  llamafarm_live_demo.py  trigger_flow_demo.py
design/: AGENT_LAYER.md  ANDROID_APP.md  API_REFERENCE.md  BIDIRECTIONAL_CAPABILITIES.md  CAPABILITY_MESH.md  CAPABILITY_SCANNER.md  CLIENT_SDK.md  COST_MODEL.md  GOSSIP_MESSAGES.md  INTEGRATIONS.md  INTEGRATION_SUMMARY.md  KNOWLEDGE_SYSTEM.md  LLAMAFARM_ARCHITECTURE_DIAGRAMS.md  LLAMAFARM_INTEGRATION.md  MATTER_INTEGRATION.md  MODEL_DEPLOYMENT.md  MULTI_TRANSPORT.md  OWNER_APPROVAL.md  PACKAGING.md  SCENARIOS.md  SESSION_MESH.md  TOOL_SYSTEM.md
docs/: EXAMPLE_FLOW_IMAGE_DETECTION.md  INTERNET_NETWORKING.md  MASTER_ARCHITECTURE.md  MENUBAR.md  MESH_DESIGN.md  MESH_IMPROVEMENTS.md  NETWORKING.md  TESTING_INTERNET_MESH.md  TOKEN_ARCHITECTURE.md
examples/: multi_hop_demo.py  two_node_mesh.py
homebrew/: atmosphere.rb
llamafarm/: llamafarm.yaml
relay/: Dockerfile  README.md  RELAY_DEPLOYMENT.md  docker-compose.yml  nixpacks.toml  railway.json  requirements.txt  server.py  test_client.py
scripts/: ble_test.py  build-ui.sh  dev-ui.sh  release.sh  test_ble.py
tests/: __init__.py  test_agents.py  test_api_full.py  test_core.py  test_cost.py  test_internet_network.py  test_network.py  test_router.py  test_tools.py
tools/: core_tools.yaml
ui/: .env.example  ARCHITECTURE.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.js
(+77 files in other folders)
